00_Task_Overview/my-solutions/YAML_Files/task_4.2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: front-svc
            port:
              number: 80
        path: /
        pathType: Exact
